# authentication-service

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
app/: main.py
app/core/: config.py  security.py
app/database/: session.py
app/models/: user.py
app/routers/: auth.py  frontend.py
app/schemas/: auth.py  user.py
app/services/: ldap_service.py  token_service.py
static/js/: auth.js
templates/: login.html
