[project]
name = "authentication-service"
version = "0.1.0"
description = ""
authors = [
    {name = "lrshlyogin",email = "ooooooorrrrr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ldap3 (>=2.9.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "redis (>=7.0.1,<8.0.0)",
    "email-validator (>=2.0.0,<3.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
alembic = "^1.17.1"
pydantic-settings = "^2.11.0"
ldap3 = "^2.9.1"
python-multipart = "^0.0.20"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
