[tool.poetry]
name = "authentication-service"
version = "0.1.0"
description = ""
authors = ["lrshlyogin <ooooooorrrrr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
asyncpg = "^0.30.0"
alembic = "^1.17.1"
pydantic-settings = "^2.11.0"
ldap3 = "^2.9.1"
python-jose = { extras = ["cryptography"], version = "^3.5.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.20"
redis = "^7.0.1"
email-validator = "^2.0.0"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
